--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -94,15 +94,15 @@ In 1990, Dark Horse startled the entire industry by teaming up its two hot Fox m
 </p><p>
 That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons (Watchmen) brought Give Me Liberty to Dark Horse. Later that year, Frank teamed with artist Geof Darrow and released Hard Boiled, again through Dark Horse. The success of these titles, together with Dark Horse’s creator’s-rights platform, led to the signing of talent from the “Big Two” to Dark Horse. High-profile creators such as Mike Mignola, Art Adams, Walt Simonson, John Byrne, and Chris Claremont brought projects to a company other than Marvel and DC for the first time. As a result of this talent movement, the field was opened wide for other creators, leading directly to the formation of numerous “independent” comic-book publishers.
 </p><p>
-<li><a href="../1001NightsOfBacchus/1001nightsofbacchus.html">1,001 Nights of Bacchus</a> (1993)
-<li><a href="../13thSon/13thSon.html">13th Son</a> (2005)
 <li><a href="Darkhorse2.jpg">2 Past Midnight</a> (2013)
 <li><a href="../3StorySecretHistory/3StorySecretHistory.html">3 Story: The Secret History of the Giant Man</a> (2009)
+<li><a href="Darkhorse3.jpg">3 x 3 Eyes</a> (1995)
+<li><a href="../911Artists/911Artists.html">9-11: Artists Respond</a> (2002)
+<li><a href="../13thSon/13thSon.html">13th Son</a> (2005)
+<li><a href="../47Ronin/47Ronin.html">47 Ronin</a> (2012)
 <li><a href="../300/300.html">300</a>   (1998)
 <li><a href="../365Samurai/365Samurai.html">365 Samurai and a Few Bowls of Rice</a>  (2009)
-<li><a href="Darkhorse3.jpg">3x3 Eyes</a> (1995)
-<li><a href="../47Ronin/47Ronin.html">47 Ronin</a> (2012)
-<li><a href="../911Artists/911Artists.html">9-11: Artists Respond</a> (2002)
+<li><a href="../1001NightsOfBacchus/1001nightsofbacchus.html">1,001 Nights of Bacchus</a> (1993)
 <li><a href="../AbeSapien/AbeSapien.html">Abe Sapien</a>  (2013)
 <li><a href="../AbeSapien/AbeSapien.html">Abe Sapien: Drums of the Dead</a> (1998)
 <li><a href="../AbeSapien/AbeSapien.html">Abe Sapien: The Abyssal Plain</a> (2010)
@@ -164,13 +164,13 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse37.jpg">Aliens: Stronghold</a> (1994)
 <li><a href="Darkhorse38.jpg">Aliens: Survival</a> (1998)
 <li><a href="Darkhorse39.jpg">Aliens: Tribes</a> (1992)
+<li><a href="Darkhorse45.jpg">Aliens: Wraith</a> (1998)
+<li><a href="Darkhorse46.jpg">Aliens: Xenogenesis</a> (1999)
 <li><a href="Darkhorse40.jpg">Aliens vs. Predator</a> (1990)
 <li><a href="Darkhorse41.jpg">Aliens vs. Predator: Booty</a> (1996)
 <li><a href="Darkhorse42.jpg">Aliens vs. Predator: Duel (1995)
 <li><a href="Darkhorse43.jpg">Aliens vs. Predator: War</a> (1995)
 <li><a href="Darkhorse44.jpg">Aliens vs. Predator: Xenogenesis</a> (2000)
-<li><a href="Darkhorse45.jpg">Aliens: Wraith</a> (1998)
-<li><a href="Darkhorse46.jpg">Aliens: Xenogenesis</a> (1999)
 <li><a href="../AmalasBlade/AmalasBlade.html">Amala's Blade</a>     #0-4    Feb 2013 – Jul (2013)
 <li><a href="../AmazingScrewOnHead/AmazingScrewOnHead.html">Amazing Screw-On Head</a>   #1  May (2002)
 <li><a href="../Amazon/Amazon.html">Amazon</a>  #1-3    Mar 2009 – May (2009)
@@ -232,10 +232,10 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../Billi99/Billi99.html">Billi 99</a> (1991)
 <li><a href="../BillyKidOldTimey/BillyKidOldTimey.html">Billy the Kid's Old Timey Oddities</a> (2005)
 <li><a href="../BlackBeetle/BlackBeetle.html">Black Beetle</a> (2013)
-<li><a href="../BlackburneCovenant/BlackburneCovenant.html">Blackburne Covenant</a> (2003)
 <li><a href="Darkhorse54.jpg">Black Cross: Dirty Work</a> (1997)
 <li><a href="../BlackHammer/BlackHammer.html">Black Hammer</a> (2016)
 <li><a href="../Blacksad/Blacksad.html">Black Sad</a> (2010)
+<li><a href="../BlackburneCovenant/BlackburneCovenant.html">Blackburne Covenant</a> (2003)
 <li><a href="Darkhorse55.jpg">Blackout</a> (2014)
 <li><a href="Darkhorse56.jpg">Blade of the Immortal</a> (2007)
 <li><a href="Darkhorse57.jpg">Blue Lily</a> (1993)
@@ -266,11 +266,11 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse72.jpg">Cormac Mac Art</a> (1990)
 <li><a href="Darkhorse73.jpg">Corny's Fetish</a> (1998)
 <li><a href="Darkhorse74.jpg">Creatures of the Night</a> (2004)
-<li><a href="../CriminalMacabre/CriminalMacabre.html">Criminal Macabre</a> (2003)
 <li><a href="Darkhorse75.jpg">Creepy Presents Alex Thoth</a> (2015)
 <li><a href="Darkhorse76.jpg">Creepy Presents Bernie Wrighton</a> (2011)
 <li><a href="Darkhorse77.jpg">Creepy Presents Richard Corben</a> (2012)
 <li><a href="Darkhorse78.jpg">Creepy Presents Steve Ditko</a> (2013)
+<li><a href="../CriminalMacabre/CriminalMacabre.html">Criminal Macabre</a> (2003)
 <li><a href="Darkhorse79.jpg">Critical Error</a> (1992)
 <li><a href="Darkhorse80.jpg">Cromwell Stone</a> (1992)
 <li><a href="Darkhorse81.jpg">Cross</a> (1996)
@@ -297,7 +297,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse102.jpg">Dead or Alive – A Cyberpunk Western</a> (1998)
 <li><a href="Darkhorse103.jpg">Deadlander</a> (2007)
 <li><a href="Darkhorse104.jpg">Deadline USA</a> (1992)
-<li><a href="Darkhorse105.jpg">A Decade of Dark Horse</a> (1996)
+<li><a href="Darkhorse105.jpg">Decade of Dark Horse</a> (1996)
 <li><a href="../DeptH/DeptH.html">Dept H</a> (2016)
 <li><a href="Darkhorse106.jpg">Devil's Footprints</a> (2003)
 <li><a href="Darkhorse107.jpg">Diablo: Tales of Sanctuary</a> (2001)
@@ -316,8 +316,8 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse116.jpg">Edgar Rice Burroughs' Tarzan: A Tale of Mugambi</a> (1995)
 <li><a href="Darkhorse117.jpg">Edgar Rice Burroughs' Tarzan: The Lost Adventure</a> (1995)
 <li><a href="Darkhorse118.jpg">Edgar Rice Burroughs' The Return of Tarzan</a> (1997)
-<li><a href="Darkhorse119.jpg">Elric: Stormbringer</a> (1997)
 <li><a href="../ElZomboFantasma/ElZomboFantasma.html">El Zombo Fantasma</a> (2004)
+<li><a href="Darkhorse119.jpg">Elric: Stormbringer</a> (1997)
 <li><a href="../EmilyTheStrange/EmilyTheStrange.html">Emily Strange</a> (2010)
 <li><a href="../Empowered/Empowered.html">Empowered</a> (2007)
 <li><a href="../EndLeague/EndLeague.html">End League</a> (2009)
