--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
 </tr>
 
 <tr>
+<td>2 Past Midnight</td>
+<td>2013</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>3 Boys Productions</td>
 <td>2004</td>
 <td>Publisher</td>
@@ -149,6 +156,13 @@
 </tr>
 
 <tr>
+<td>3x3 Eyes</td>
+<td>1995</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>4 Kids Walk Into A Bank</td>
 <td>2017</td><td>Black Mask Studios</td>
 <td><a href="4KidsWalkIntoABank/4KidsWalkIntoABank.html">Details</a></td>
@@ -213,7 +227,7 @@
 <tr>
 <td>9-11 Artists Respond</td>
 <td>2002</td>
-<td>Marvel</td>
+<td>Dark Horse</td>
 <td><a href="911Artists/911Artists.html">Details</a></td>
 </tr>
 
@@ -374,8 +388,15 @@
 <tr>
 <td>365 Samurai</td>
 <td>2009</td>
-<td>Marvel</td>
+<td>Dark Horse</td>
 <td><a href="365Samurai/365Samurai.html">Details</a></td>
+</tr>
+
+<tr>
+<td>3x3 Eyes</td>
+<td>1995</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -1362,17 +1383,17 @@
 </tr>
 
 <tr>
-<td>Age of Selfishness</td>
-<td>2015</td>
-<td>Abrams</td>
-<td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Age of Reptiles</td>
 <td>1993</td>
 <td>Dark Horse</td>
 <td><a href="AgeOfReptiles/AgeOfReptiles.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Age of Selfishness</td>
+<td>2015</td>
+<td>Abrams</td>
+<td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
 </tr>
 
 <tr>
@@ -1772,6 +1793,13 @@
 </tr>
 
 <tr>
+<td>Alien vs. Predator</td>
+<td>2008</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Alien Worlds</td>
 <td>1982</td>
 <td>PC</td>
@@ -1786,10 +1814,220 @@
 </tr>
 
 <tr>
+<td>Aliens: Alchemy</td>
+<td>1997</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Apocalypse</td>
+<td>1999</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Berserker</td>
+<td>1995</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Colonial Marines</td>
+<td>1994</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Countdown</td>
+<td>1993</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Aliens: Dead Orbit</td>
 <td>2017</td>
 <td>Dark Horse</td>
 <td><a href="AliensDeadOrbit/AliensDeadOrbit.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Defiance</td>
+<td>2016</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Earth Angel</td>
+<td>1994</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Earth War</td>
+<td>1990</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Fast Track to Heaven</td>
+<td>2011</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Fire and Stone</td>
+<td>1993</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Genocide</td>
+<td>1992</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Glass Corridor</td>
+<td>1998</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Havoc</td>
+<td>1997</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Hive</td>
+<td>1992</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Kidnapped</td>
+<td>1998</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Labyrinth</td>
+<td>1994</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Lovesick</td>
+<td>1993</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: More Than Human</td>
+<td>2010</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Music Of The Spears</td>
+<td>1994</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Newt's Tale</td>
+<td>1992</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Purge</td>
+<td>1997</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Rogue</td>
+<td>1993</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Sacrifice</td>
+<td>1993</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Salvation</td>
+<td>1993</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Stalker</td>
+<td>1998</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Stronghold</td>
+<td>1994</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Survival</td>
+<td>1998</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Tribes</td>
+<td>1992</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Wraith</td>
+<td>1998</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Aliens: Xenogenesis</td>
+<td>2000</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3101,7 +3339,6 @@
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
 </tr>
 
-
 <tr>
 <td>Atomic Robo</td>
 <td>2015</td>
@@ -3600,6 +3837,13 @@
 </tr>
 
 <tr>
+<td>Basil Wolverton's Planet of Terror</td>
+<td>1987</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bat Lash</td>
 <td>1968</td>
 <td>DC</td>
@@ -3998,6 +4242,27 @@
 </tr>
 
 <tr>
+<td>Bettie Page Comics</td>
+<td>1996</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bettie Page Comics: Spicy Adventure</td>
+<td>1997</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bettie Page Comics: Queen of the Nile</td>
+<td>2000</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Betty and Her Steady</td>
 <td>1950</td>
 <td>Avon</td>
@@ -4068,10 +4333,24 @@
 </tr>
 
 <tr>
+<td>Big</td>
+<td>1989</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Big Bang Comics</td>
 <td>1994</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Big Blown Baby</td>
+<td>1996</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4205,6 +4484,13 @@
 <td>1957</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Billy the Kid's Old Timey Oddities</td>
+<td>2005</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4411,7 +4697,7 @@
 </tr>
 
 <tr>
-<td>Black is the Color</td>
+<td>Black Is The Color</td>
 <td>2013</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
@@ -4516,6 +4802,13 @@
 </tr>
 
 <tr>
+<td>Blackout</td>
+<td>2014</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blacksad</td>
 <td>2010</td>
 <td>Dark Horse</td>
@@ -4555,6 +4848,13 @@
 <td>1973</td>
 <td>Marvel</td>
 <td><a href="Blade/Blade.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Blade of the Immortal</td>
+<td>2007</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4754,6 +5054,13 @@
 </tr>
 
 <tr>
+<td>Blue Lily</td>
+<td>1993</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blue Ribbon</td>
 <td>1939</td>
 <td>MLJ</td>
@@ -4772,6 +5079,13 @@
 <td>1955</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bob Burden's Original Mysterymen Presents</td>
+<td>1999</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4813,6 +5127,13 @@
 <td>1972</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Body Bags</td>
+<td>1996</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4876,6 +5197,13 @@
 <td>1994</td>
 <td>Image</td>
 <td><a href="Boof/Boof.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Book of Night</td>
+<td>1987</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4988,6 +5316,20 @@
 <td>1989</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brain Boy</td>
+<td>2013</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brain Boy: The Men From G.E.S.T.A.L.T.</td>
+<td>2014</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5460,6 +5802,13 @@
 </tr>
 
 <tr>
+<td>Captain Midnight</td>
+<td>2013</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Campus Humor</td>
 <td>1957</td>
 <td>Charlton</td>
@@ -5887,6 +6236,13 @@
 </tr>
 
 <tr>
+<td>Catalyst: Agents of Change</td>
+<td>1994</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Catholic Comics</td>
 <td>1946</td>
 <td>Charlton</td>
@@ -6209,6 +6565,20 @@
 </tr>
 
 <tr>
+<td>Chickenhare: Fire in the Hole</td>
+<td>2008</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Chickenhare: The House of Klaus</td>
+<td>2006</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Chief Crazy Horse</td>
 <td>1950</td>
 <td>Avon</td>
@@ -6341,6 +6711,13 @@
 </tr>
 
 <tr>
+<td>Chronowar</td>
+<td>1997</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Chuck Norris</td>
 <td>1987</td>
 <td>Marvel</td>
@@ -6382,6 +6759,20 @@
 </tr>
 
 <tr>
+<td>City of Others</td>
+<td>2007</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>City of the Living Dead</td>
+<td>1952</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Civil War</td>
 <td>2006</td>
 <td>Marvel</td>
@@ -6393,13 +6784,6 @@
 <td>2016</td>
 <td>Marvel</td>
 <td><a href="CivilWarII/CivilWarII.html">Details</a></td>
-</tr>
-
-<tr>
-<td>City of the Living Dead</td>
-<td>1952</td>
-<td>Avon</td>
-<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6618,6 +7002,12 @@
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
 </tr>
 
+<tr>
+<td>Colors in Black</td>
+<td>1995</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
 
 <tr>
 <td>Columbia Comics</td>
@@ -6771,6 +7161,13 @@
 <td>2008</td>
 <td>Abrams</td>
 <td><a href="AbramsBooks/AbramsBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comics' Greatest World</td>
+<td>1993</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7005,6 +7402,20 @@
 </tr>
 
 <tr>
+<td>Cormac Mac Art</td>
+<td>1990</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Corny's Fetish</td>
+<td>1998</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cosmic Odyssey</td>
 <td>1988</td>
 <td>DC</td>
@@ -7201,6 +7612,34 @@
 </tr>
 
 <tr>
+<td>Creepy Presents Alex Thoth</td>
+<td>2015</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Creepy Presents Bernie Wrightson</td>
+<td>2011</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Creepy Presents Richard Corben</td>
+<td>2012</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Creepy Presents Steve Ditko</td>
+<td>2013</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Creepy Things</td>
 <td>1975</td>
 <td>Charlton</td>
@@ -7320,10 +7759,31 @@
 </tr>
 
 <tr>
+<td>Critical Error</td>
+<td>1992</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Critters</td>
 <td>1986</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cromwell Stone</td>
+<td>1992</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cross</td>
+<td>1996</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7377,7 +7837,7 @@
 
 <tr>
 <td>Crush</td>
-<td>2003</td>
+<td>2004</td>
 <td>Dark Horse</td>
 <td><a href="CrushDH/CrushDH.html">Details</a></td>
 </tr>
@@ -7443,6 +7903,13 @@
 <td>1902</td>
 <td>Publisher</td>
 <td><a href="CupplesLeon/CupplesLeon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Curse of Dracula</td>
+<td>1998</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7538,7 +8005,7 @@
 </tr>
 
 <tr>
-<td>DC vs. Marvel</td>
+<td>D.C. vs. Marvel</td>
 <td>1996</td>
 <td>DC</td>
 <td><a href="MarvelVsDC/MarvelVsDC.html">Details</a></td>
@@ -7783,10 +8250,38 @@
 </tr>
 
 <tr>
-<td>Dark Horse Book of Dead</td>
+<td>Dark Horse Book Of Hauntings</td>
+<td>2003</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Horse Book Of Monsters</td>
+<td>2006</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Horse Book Of The Dead</td>
 <td>2005</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorseBookOfTheDead/DarkHorseBookOfTheDead.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Horse Book Of Witchcraft</td>
+<td>2004</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Horse Classics</td>
+<td>1996</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7797,10 +8292,31 @@
 </tr>
 
 <tr>
+<td>Dark Horse Down Under</td>
+<td>1994</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Horse Monsters</td>
+<td>1997</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dark Horse Presents</td>
 <td>1986</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorsePresents/DarkHorsePresents.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Horse Twenty Years</td>
+<td>2006</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7892,6 +8408,13 @@
 <td>1990</td>
 <td>Marvel</td>
 <td><a href="Darkman/Darkman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Darkness Falls, The Tragic Life Of Mathilda Dixon</td>
+<td>2003</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8077,6 +8600,13 @@
 </tr>
 
 <tr>
+<td>Dead or Alive - A Cyberpunk Western</td>
+<td>1998</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dead Who Walk</td>
 <td>1952</td>
 <td>Avon</td>
@@ -8098,6 +8628,13 @@
 </tr>
 
 <tr>
+<td>Deadlander</td>
+<td>2007</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Deadline</td>
 <td>2002</td>
 <td>Marvel</td>
@@ -8109,6 +8646,13 @@
 <td>1988</td>
 <td>Deadline Publications</td>
 <td><a href="DeadlineMag/DeadlineMag.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Deadline USA</td>
+<td>1992</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8256,6 +8800,13 @@
 <td>1992</td>
 <td>Aircel</td>
 <td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Decade Of Darkhorse</td>
+<td>1996</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8441,6 +8992,13 @@
 </tr>
 
 <tr>
+<td>Diablo: Tales of Sanctuary</td>
+<td>2001</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Diary of An Awesome Friendly Kid</td>
 <td>2019</td>
 <td>Abrams</td>
@@ -8487,6 +9045,13 @@
 <td>1997</td>
 <td>Bandai</td>
 <td><a href="Digimon/Digimon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Digimon Digital Monsters</td>
+<td>2000</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8749,6 +9314,13 @@
 </tr>
 
 <tr>
+<td>Dominion</td>
+<td>1993</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Domino</td>
 <td>1997</td>
 <td>Marvel</td>
@@ -8938,6 +9510,13 @@
 </tr>
 
 <tr>
+<td>Dr. Robot Special</td>
+<td>2000</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dracula</td>
 <td>1897</td>
 <td>Archibald Constable</td>
@@ -9012,6 +9591,13 @@
 <td>1981</td>
 <td>Paramount</td>
 <td><a href="Dragonslayer/Dragonslayer.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Drawing On Your Nightmares</td>
+<td>2003</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9323,6 +9909,13 @@
 </tr>
 
 <tr>
+<td>Edgar Rice Burroughs' Jungle Tales of Tarzan</td>
+<td>2015</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Edge of Chaos</td>
 <td>1983</td>
 <td>PC</td>
@@ -9495,6 +10088,13 @@
 <td>1983</td>
 <td>PC</td>
 <td><a href="Elric/elric.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Elric: Stormbringer</td>
+<td>1997</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
