--- a/index.html
+++ b/index.html
@@ -838,6 +838,13 @@
 </tr>
 
 <tr>
+<td>Abraham Lincoln Life Story</td>
+<td>1958</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Abrams Books</td>
 <td>1949</td>
 <td>Publisher</td>
@@ -1222,10 +1229,24 @@
 </tr>
 
 <tr>
+<td>Adventures of Little Orphan Annie</td>
+<td>1941</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Adventures of Luther Arkwright</td>
 <td>1978</td>
 <td>Dark Horse</td>
 <td><a href="AdventuresLutherArkwright/AdventuresLutherArkwright.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventures of Might Mouse</td>
+<td>1959</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -1464,6 +1485,13 @@
 <td>1987</td>
 <td>Marvel</td>
 <td><a href="AirRaiders/airraiders.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Air War Stories</td>
+<td>1964</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2374,6 +2402,13 @@
 </tr>
 
 <tr>
+<td>Alvin</td>
+<td>1962</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>AM Works</td>
 <td>1995</td>
 <td>Publisher</td>
@@ -2791,6 +2826,13 @@
 <td>1948</td>
 <td>Creator</td>
 <td><a href="AndyWarhol/AndyWarhol.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Angel</td>
+<td>1954</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3872,6 +3914,13 @@
 </tr>
 
 <tr>
+<td>Ballyhoo</td>
+<td>1931</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Bandette</td>
 <td>2013</td>
 <td>Monkeybrain</td>
@@ -4194,6 +4243,13 @@
 </tr>
 
 <tr>
+<td>Beach Blanket Bingo</td>
+<td>1965</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Beano</td>
 <td>1938</td>
 <td>DC Thomson</td>
@@ -4310,6 +4366,13 @@
 <td>2007</td>
 <td>Cartoon Network</td>
 <td><a href="Ben10/Ben10.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ben Casey</td>
+<td>1962</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5488,6 +5551,13 @@
 
 <tr>
 <td>Brain Boy</td>
+<td>1962</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Brain Boy</td>
 <td>2013</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
@@ -5799,6 +5869,13 @@
 <td>2009</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Burke's Law</td>
+<td>1964</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6913,6 +6990,13 @@
 </tr>
 
 <tr>
+<td>Cisco Kid</td>
+<td>1950</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cities of the Fantastic</td>
 <td>2002</td>
 <td>NBM</td>
@@ -7199,6 +7283,13 @@
 </tr>
 
 <tr>
+<td>Combat</td>
+<td>1961</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Combat Casey</td>
 <td>1952</td>
 <td>Atlas</td>
@@ -7231,6 +7322,13 @@
 <td>1987</td>
 <td>Marvel</td>
 <td><a href="CometMan/CometMan.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comic Album</td>
+<td>1958</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7280,6 +7378,13 @@
 <td>1982</td>
 <td>Publisher</td>
 <td><a href="Comico/Comico.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Comics</td>
+<td>1937</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8208,6 +8313,13 @@
 </tr>
 
 <tr>
+<td>Daffy</td>
+<td>1961</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Daily Bugle</td>
 <td>1996</td>
 <td>Marvel</td>
@@ -8915,6 +9027,13 @@
 </tr>
 
 <tr>
+<td>Deadwood Gulch</td>
+<td>1931</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Deadworld</td>
 <td>1986</td>
 <td>Arrow</td>
@@ -9587,6 +9706,13 @@
 </tr>
 
 <tr>
+<td>Donald Duck</td>
+<td>1952</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Donald Duck and His Nephews Best Comics</td>
 <td>1983</td>
 <td>Abbeville</td>
@@ -9727,6 +9853,13 @@
 </tr>
 
 <tr>
+<td>Dr. Kildare</td>
+<td>1962</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dr. Robot Special</td>
 <td>2000</td>
 <td>Dark Horse</td>
@@ -9738,6 +9871,13 @@
 <td>1897</td>
 <td>Archibald Constable</td>
 <td><a href="Dracula/Dracula.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dracula</td>
+<td>1966</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10123,6 +10263,13 @@
 <td>2005</td>
 <td>Marvel</td>
 <td><a href="EdensTrail/EdensTrail.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Edgar Rice Burroughs' Tarzan</td>
+<td>1948</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11609,6 +11756,13 @@
 </tr>
 
 <tr>
+<td>Frankenstein</td>
+<td>1963</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fray</td>
 <td>2001</td>
 <td>Dark Horse</td>
@@ -12169,6 +12323,13 @@
 </tr>
 
 <tr>
+<td>Gene Autry Comics</td>
+<td>1946</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gene Colan</td>
 <td>1926</td>
 <td>Creator</td>
@@ -12295,6 +12456,13 @@
 </tr>
 
 <tr>
+<td>Get Smart</td>
+<td>1966</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ghetto Klown</td>
 <td>2015</td>
 <td>Abrams</td>
@@ -12355,6 +12523,13 @@
 <td>1994</td>
 <td>Marvel</td>
 <td><a href="GhostRider2099/GhostRider2099.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ghost Stories</td>
+<td>1962</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13604,6 +13779,20 @@
 </tr>
 
 <tr>
+<td>Henry</td>
+<td>1948</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Henry Aldrich</td>
+<td>1950</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Heralds</td>
 <td>2010</td>
 <td>Marvel</td>
@@ -14133,6 +14322,13 @@
 <td>2004</td>
 <td>Publisher</td>
 <td><a href="IconComics/IconComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Idaho</td>
+<td>1963</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15347,6 +15543,13 @@
 </tr>
 
 <tr>
+<td>Jungle Jim</td>
+<td>1954</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jungle Love</td>
 <td>1991</td>
 <td>Aircel</td>
@@ -15358,6 +15561,13 @@
 <td>1954</td>
 <td>Marvel</td>
 <td><a href="JungleTales/JungleTales.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jungle War Stories</td>
+<td>1962</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15746,6 +15956,13 @@
 </tr>
 
 <tr>
+<td>King of the Royal Mounted</td>
+<td>1948</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>King Solomon's Mines</td>
 <td>1951</td>
 <td>Avon</td>
@@ -15904,6 +16121,13 @@
 <td>1974</td>
 <td>ABC</td>
 <td><a href="KolchakTheNightStalker/KolchakTheNightStalker.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Kona, Monarch of Monster Isle</td>
+<td>1962</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16438,6 +16662,13 @@
 </tr>
 
 <tr>
+<td>Little Iodine</td>
+<td>1950</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Little Jack Frost</td>
 <td>1951</td>
 <td>Avon</td>
@@ -16613,6 +16844,20 @@
 </tr>
 
 <tr>
+<td>Lone Ranger</td>
+<td>1948</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lone Ranger's Famous Horse Hi-Yo Silver</td>
+<td>1952</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lone Wolf 2100</td>
 <td>2003</td>
 <td>Dark Horse</td>
@@ -16645,6 +16890,13 @@
 <td>1985</td>
 <td>Marvel</td>
 <td><a href="Longshot/Longshot.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Looney Tunes</td>
+<td>1955</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17230,9 +17482,23 @@
 
 <tr>
 <td>Marge's Little Lulu</td>
+<td>1948</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Marge's Little Lulu</td>
 <td>2019</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Marge's Tubby</td>
+<td>1953</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18271,6 +18537,13 @@
 </tr>
 
 <tr>
+<td>Mickey Mouse</td>
+<td>1952</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mickey Mouse Best Comics</td>
 <td>1978</td>
 <td>Abbeville</td>
@@ -18499,6 +18772,13 @@
 <td>1966</td>
 <td>CBS</td>
 <td><a href="MissionImpossible/MissionImpossible.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mission: Impossible</td>
+<td>1967</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19307,6 +19587,13 @@
 </tr>
 
 <tr>
+<td>Naza Stone Age Warrior</td>
+<td>1964</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>NBC</td>
 <td>1957</td>
 <td>Publisher</td>
@@ -19486,6 +19773,13 @@
 <td>1935</td>
 <td>National Allied</td>
 <td><a href="NewFun/NewFun.html">Details</a></td>
+</tr>
+
+<tr>
+<td>New Funnies</td>
+<td>1942</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19976,6 +20270,13 @@
 <td>1990</td>
 <td>Marvel</td>
 <td><a href="NthMan/NthMan.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Nukla</td>
+<td>1965</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21020,6 +21321,13 @@
 </tr>
 
 <tr>
+<td>Pogo Possum</td>
+<td>1949</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Pogo: The Complete Syndicated Comic Strips</td>
 <td>2011</td>
 <td>Fantagraphics</td>
@@ -21068,6 +21376,13 @@
 <td><a href="Avon/Avon.html">Details</a></td>
 
 <tr>
+<td>Ponytail</td>
+<td>1962</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Poor Arnold's Almanac</td>
 <td>1998</td>
 <td>Fantagraphics</td>
@@ -21093,6 +21408,13 @@
 <td>2017</td>
 <td>Drawn &amp; Quarterly</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Popular Comics</td>
+<td>1936</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -21845,6 +22167,13 @@
 </tr>
 
 <tr>
+<td>Red Ryder</a>
+<td>1941</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Red Sonja</td>
 <td>1973</td>
 <td>Marvel</td>
@@ -22453,6 +22782,13 @@
 </tr>
 
 <tr>
+<td>Roy Rogers</a>
+<td>1948</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Royal City</td>
 <td>2017</td>
 <td>Image</td>
@@ -22991,6 +23327,13 @@
 </tr>
 
 <tr>
+<td>Sea Hunt</a>
+<td>1960</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Search For Love</td>
 <td>1950</td>
 <td>ACG</td>
@@ -23198,6 +23541,13 @@
 <td>2005</td>
 <td>Dark Horse</td>
 <td><a href="Serenity/Serenity.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sergeant Preston Of The Yukon</a>
+<td>1952</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25015,6 +25365,20 @@
 </tr>
 
 <tr>
+<td>Super Comics</a>
+<td>1938</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Super Heroes</a>
+<td>1967</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Super Pup</td>
 <td>1954</td>
 <td>Avon</td>
@@ -25228,6 +25592,13 @@
 <td>1959</td>
 <td>Marvel</td>
 <td><a href="TalesOfSuspense/TalesOfSuspense.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tales of the Green Beret</a>
+<td>1967</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25574,6 +25945,13 @@
 </tr>
 
 <tr>
+<td>Thirteen Going on Eighteen</a>
+<td>1962</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Thirteen Going On Eighteen</td>
 <td>2010</td>
 <td>Marvel</td>
@@ -25816,6 +26194,20 @@
 <td>1954</td>
 <td>Creator</td>
 <td><a href="ToddSchorr/ToddSchorr.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Toka the Jungle King</a>
+<td>1964</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tom &amp; Jerry Comics</a>
+<td>1949</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26075,6 +26467,13 @@
 <td>1992</td>
 <td>Publisher</td>
 <td><a href="TundraUK/TundraUK.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Turok, Son of Stone</a>
+<td>1956</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26828,6 +27227,13 @@
 </tr>
 
 <tr>
+<td>Walt Disney's Uncle Scrooge</a>
+<td>1953</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Walt Kelly</td>
 <td>1913</td>
 <td>Creator</td>
@@ -26839,6 +27245,13 @@
 <td>1990</td>
 <td>Innovation</td>
 <td><a href="Innovation/Innovation.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Walter Lantz New Funnies</a>
+<td>1946</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27231,6 +27644,13 @@
 <td>1951</td>
 <td>Creator</td>
 <td><a href="WendyPini/WendyPini.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Werewolf</a>
+<td>1966</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27969,6 +28389,13 @@
 </tr>
 
 <tr>
+<td>Yak Yak</a>
+<td>1960</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Yang</td>
 <td>1973</td>
 <td>Charlton</td>
@@ -28155,6 +28582,13 @@
 <td>2014</td>
 <td>Publisher</td>
 <td><a href="Z2Comics/Z2Comics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Zane Grey's Stories of the West</a>
+<td>1955</td>
+<td>Dell</td>
+<td><a href="Dell/Dell.html">Details</a></td>
 </tr>
 
 <tr>
