--- a/Dell/Dell.html
+++ b/Dell/Dell.html
@@ -18,7 +18,68 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="Dell1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell59.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell61.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell62.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Dell63.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -32,56 +93,75 @@ Dell Comics was best known for its licensed material, most notably the animated 
 </p><p>
 Titles
 </p><p>
-<li><a href="../1000Jokes/1000Jokes.html">1000 Jokes</a> (116 issues, 1938–1969)
-<li><a href="../AnimalComics/AnimalComics.html">Animal Comics</a> (30 issues, 1942–1947)
-<li>Beach Blanket Bingo (1965)
-<li>Ben Casey (1962–1964)
-<li>Brain Boy (5 issues, 1962–1963)
-<li>Brave Eagle (see TV Series Brave Eagle)
-<li>Burke's Law
-<li>Campus Clowns
-<li>The Cisco Kid (41 issues, 1950–1958)
-<li>Combat (40 issues)
-<li>Crackajack Funnies (43 issues, 1938–1942)
-<li>Deadwood Gulch
-<li>Dr. Kildare (1962–1965)
-<li>Dracula (3 issues, 1966–1967)
-<li>Edgar Rice Burroughs' Tarzan (131 issues, 1948–1962) — later continued by Western, et al.
-<li>Four Color (1,354 issues, 1938–1968)
-<li>Frankenstein (3 issues, 1966–1967)
-<li>The Funnies (36 issues, 1929–1930)
-<li>Gene Autry Comics / Gene Autry and Champion (121 issues, 1946–1959)
-<li>Get Smart
-<li>Ghost Stories (37 issues, #1 only written by John Stanley)
-<li>Idaho (8 issues, 1963-1965)
-<li>Jungle War Stories (11 issues 1962-1966) retitled Guerilla War in 1965 (issues 12–14 March 1966)
-<li>Kona, Monarch of Monster Isle (20 issues, 1962–1964)
-<li>Little Lulu (164 issues, 1948–1962) — later continued by Western, et al.
-<li>The Lone Ranger (145 issues, 1948–1962) — later continued by Gold Key
-<li>The Lone Ranger's Famous Horse Hi-Yo Silver (34 issues, 1952–1960)
-<li>Looney Tunes and Merrie Melodies Comics (153 issues, 1941–1954)
-<li>Mission: Impossible (5 issues)
-<li>Naza Stone Age Warrior (9 issues)
-<li>New Funnies (288 issues, 1942–1962)
-<li>Neutro (1 issue)
-<li>Nukla (4 issues, 1965–1966)
-<li>Popular Comics (145 issues, 1936–1948)
-<li>Possum Holler
-<li>Ponytail (20 issues)
-<li>Red Ryder (151 issues, 1941–1956)
-<li>Rock-Age Roy
-<li>Sancho and the Don
-<li>Sea Hunt
-<li>Super Comics (121 issues, 1938–1949)
-<li>Super Heroes (1967, starred the "Fab 4")
-<li>Tales of the Green Beret (5 issues, 1967-1969)
-<li>Thirteen Going on Eighteen (29 issues, written by John Stanley)
-<li>Toka the Jungle King (10 issues)
-<li>Tom &amp; Jerry Comics (153 issues, 1949–1962)
-<li>Turok, Son of Stone (130 issues, 1956–1982)
-<li>Walt Disney's Comics and Stories (264 issues, 1940–1962) — continued by Western, et al.
-<li>Werewolf (1966–1967)
-<li>Yak Yak (early 1960s satirical comic principally drawn by artist Jack Davis)
+<li><a href="../1000Jokes/1000Jokes.html">1000 Jokes</a> (1938)
+<li><a href="Dell2.jpg">Abraham Lincoln Life Story</a> (1958)
+<li><a href="Dell3.jpg">Adventures of Little Orphan Annie</a> (1941)
+<li><a href="Dell4.jpg">Adventures of Mighty Mouse</a> (1959)
+<li><a href="Dell5.jpg">Air War Stories</a> (1964)
+<li><a href="Dell6.jpg">Alvin</a> (1962)
+<li><a href="Dell7.jpg">Angel</a> (1954)
+<li><a href="../AnimalComics/AnimalComics.html">Animal Comics</a> (1942)
+<li><a href="Dell9.jpg">Ballyhoo</a> (1931)
+<li><a href="Dell10.jpg">Beach Blanket Bingo</a> (1965)
+<li><a href="Dell11.jpg">Ben Casey</a> (1962)
+<li><a href="Dell12.jpg">Brain Boy</a> (1962)
+<li><a href="Dell13.jpg">Burke's Law</a> (1964)
+<li><a href="Dell14.jpg">Cisco Kid</a> (1950)
+<li><a href="Dell15.jpg">Combat</a> (1961)
+<li><a href="Dell16.jpg">Comic Album</a> (1958)
+<li><a href="Dell17.jpg">Comics</a> (1937)
+<li><a href="Dell18.jpg">Daffy</a> (1956)
+<li><a href="Dell19.jpg">Deadwood Gulch</a> (1931)
+<li><a href="Dell20.jpg">Donald Duck</a> (1952)
+<li><a href="Dell21.jpg">Dr. Kildare</a> (1962)
+<li><a href="Dell22.jpg">Dracula</a> (1966)
+<li><a href="Dell23.jpg">Edgar Rice Burroughs' Tarzan</a> (1948)
+<li><a href="../FairyTaleParade/FairyTaleParade.html">Fairy Tale Parade</a> (1943)
+<li><a href="../FourColor/FourColor.html">Four Color</a> (1938)
+<li><a href="Dell24.jpg">Frankenstein</a> (1963)
+<li><a href="../Funnies/Funnies.html">Funnies</a> (1929)
+<li><a href="Dell25.jpg">Gene Autry Comics</a> (1946)
+<li><a href="Dell26.jpg">Get Smart</a> (1966)
+<li><a href="Dell27.jpg">Ghost Stories</a> (1962)
+<li><a href="Dell28.jpg">Henry</a> (1948)
+<li><a href="Dell29.jpg">Henry Aldrich</a> (1950)
+<li><a href="Dell30.jpg">Idaho</a> (1963)
+<li><a href="Dell32.jpg">Jungle Jim</a> (1954)
+<li><a href="Dell31.jpg">Jungle War Stories</a> (1962)
+<li><a href="Dell33.jpg">King of the Royal Mounted</a> (1952)
+<li><a href="Dell35.jpg">Kona, Monarch of Monster Isle</a> (1962)
+<li><a href="Dell34.jpg">Little Iodine</a> (1950)
+<li><a href="Dell36.jpg">Lone Ranger</a> (1948)
+<li><a href="Dell37.jpg">Lone Ranger's Famous Horse Hi-Yo Silver</a> (1952)
+<li><a href="Dell38.jpg">Looney Tunes</a> (1955)
+<li><a href="Dell39.jpg">Marge's Little Lulu</a> (1948)
+<li><a href="Dell40.jpg">Marge's Tubby</a> (1953)
+<li><a href="Dell41.jpg">Mickey Mouse</a> (1952)
+<li><a href="Dell42.jpg">Mission: Impossible</a> (1967)
+<li><a href="Dell43.jpg">Naza Stone Age Warrior</a> (1964)
+<li><a href="Dell44.jpg">New Funnies</a> (1942)
+<li><a href="Dell45.jpg">Nukla</a> (1965)
+<li><a href="../Pogo/Pogo.html">Pogo Possum</a> (1949)
+<li><a href="Dell47.jpg">Ponytail</a> (1962)
+<li><a href="Dell46.jpg">Popular Comics</a> (1936)
+<li><a href="Dell48.jpg">Red Ryder</a> (1941)
+<li><a href="Dell49.jpg">Roy Rogers</a> (1948)
+<li><a href="Dell50.jpg">Sea Hunt</a> (1960)
+<li><a href="Dell51.jpg">Sergeant Preston Of The Yukon</a> (1952)
+<li><a href="Dell52.jpg">Super Comics</a> (1938)
+<li><a href="Dell53.jpg">Super Heroes</a> (1967)
+<li><a href="Dell54.jpg">Tales of the Green Beret</a> (1967)
+<li><a href="Dell55.jpg">Thirteen Going on Eighteen</a> (1962)
+<li><a href="Dell56.jpg">Toka the Jungle King</a> (1964)
+<li><a href="Dell57.jpg">Tom &amp; Jerry Comics</a> (1949)
+<li><a href="Dell58.jpg">Turok, Son of Stone</a> (1956)
+<li><a href="WaltDisneysComics/WaltDisneysComics.html">Walt Disney's Comics and Stories</a> (1940)
+<li><a href="Dell59.jpg">Walt Disney's Uncle Scrooge</a> (1953)
+<li><a href="Dell60.jpg">Walter Lantz New Funnies</a> (1946)
+<li><a href="WarComics/WarComics.html">War Comics</a> (1940)
+<li><a href="Dell61.jpg">Werewolf</a> (1966)
+<li><a href="Dell63.jpg">Yak Yak</a> (1960)
+<li><a href="Dell62.jpg">Zane Grey's Stories of the West</a> (1955)
 </p>
 
 </body>
